--- a/exp_solving.ipynb
+++ b/exp_solving.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import re\n",
     "#vars assumed to be x & y only"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +51,7 @@
        "'(2*y-150)/60'"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +82,7 @@
        "'3x+2x+1*x'"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,18 +105,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'5/5'"
-      ]
-     },
-     "execution_count": 180,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-149-6e63b6684af8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mreplace_operator_with_inverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'5*5'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-148-d71b86ad2319>\u001b[0m in \u001b[0;36mreplace_operator_with_inverse\u001b[0;34m(exp, operator)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mreplace_operator_with_inverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moperator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0minverse_operators\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'-'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'+'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'+'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'-'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'*'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'/'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'*'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moperator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minverse_operators\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moperator\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: ''"
+     ]
     }
    ],
    "source": [
@@ -126,9 +127,274 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "str1 = '2y = 60x+150+3x+2yx+5y+2x+5x+8y+309+23'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lhs,rhs = str1.split('=')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LHS = lhs.rstrip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RHS = rhs.lstrip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LHS = re.split(r'\\+',LHS)\n",
+    "RHS = re.split(r'\\+',RHS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2y']"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LHS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['60x', '150', '3x', '2yx', '5y', '2x', '5x', '8y', '309', '23']"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RHS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60x\n",
+      "150\n",
+      "3x\n",
+      "2yx\n",
+      "5y\n",
+      "2x\n",
+      "5x\n",
+      "8y\n",
+      "309\n",
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "remove_list=[]\n",
+    "for ix,term in enumerate(RHS):\n",
+    "    print(term)\n",
+    "    resp = re.findall('\\d+$', term)\n",
+    "    if resp:\n",
+    "        #print(resp)\n",
+    "        resp = ''.join(resp)\n",
+    "        total += int(resp)\n",
+    "        remove_list.append(resp)\n",
+    "        \n",
+    "#print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RHS=[x for x in RHS if x not in remove_list]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['150', '309', '23']"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['56x']"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall('\\d+[a-z]', '56xy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\d+([a-z]{1})$\n",
+      "\\d+([a-z]{1})$\n",
+      "\\d+([a-z]{1})$\n",
+      "\\d+([a-z]{1})$\n",
+      "\\d+([a-z]{1})$\n",
+      "\\d+([a-z]{1})$\n",
+      "\\d+([a-z]{1})$\n",
+      "\\d+([a-z]{2})$\n",
+      "\\d+([a-z]{2})$\n",
+      "\\d+([a-z]{2})$\n",
+      "\\d+([a-z]{2})$\n",
+      "\\d+([a-z]{2})$\n",
+      "\\d+([a-z]{2})$\n",
+      "\\d+([a-z]{2})$\n",
+      "\\d+([a-z]{3})$\n",
+      "\\d+([a-z]{3})$\n",
+      "\\d+([a-z]{3})$\n",
+      "\\d+([a-z]{3})$\n",
+      "\\d+([a-z]{3})$\n",
+      "\\d+([a-z]{3})$\n",
+      "\\d+([a-z]{3})$\n",
+      "\\d+([a-z]{4})$\n",
+      "\\d+([a-z]{4})$\n",
+      "\\d+([a-z]{4})$\n",
+      "\\d+([a-z]{4})$\n",
+      "\\d+([a-z]{4})$\n",
+      "\\d+([a-z]{4})$\n",
+      "\\d+([a-z]{4})$\n"
+     ]
+    }
+   ],
+   "source": [
+    "#retrieves the variable names of the expressions, returns as a set\n",
+    "for ix in range(1,5):\n",
+    "    for term in RHS:\n",
+    "        query = '\\d+([a-z]{'+str(ix) + '})$'\n",
+    "        print(query)\n",
+    "        resp = re.findall(query,term)\n",
+    "        if resp:\n",
+    "            s.add(resp[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x', 'y', 'yx'}"
+      ]
+     },
+     "execution_count": 239,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['60x', '3x', '2yx', '5y', '2x', '5x', '8y']"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
