Added functionality to group like terms
Currently only support addition operations

--- a/exp_solving.ipynb
+++ b/exp_solving.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "'(2*y-150)/60'"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "'3x+2x+1*x'"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -115,8 +115,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-149-6e63b6684af8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mreplace_operator_with_inverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'5*5'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-148-d71b86ad2319>\u001b[0m in \u001b[0;36mreplace_operator_with_inverse\u001b[0;34m(exp, operator)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mreplace_operator_with_inverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moperator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0minverse_operators\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'-'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'+'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'+'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'-'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'*'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'/'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'*'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moperator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minverse_operators\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moperator\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-132-6e63b6684af8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mreplace_operator_with_inverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'5*5'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-131-d71b86ad2319>\u001b[0m in \u001b[0;36mreplace_operator_with_inverse\u001b[0;34m(exp, operator)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mreplace_operator_with_inverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moperator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0minverse_operators\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'-'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'+'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'+'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'-'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'*'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'/'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'*'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moperator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minverse_operators\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moperator\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m: ''"
      ]
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "['2y']"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "['60x', '150', '3x', '2yx', '5y', '2x', '5x', '8y', '309', '23']"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 140,
    "metadata": {
     "scrolled": true
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "['150', '309', '23']"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "['56x']"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -361,41 +361,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re #Lists all the variables in the expression excluding any digits\n",
+    "def get_variables(exp):\n",
+    "    resp = re.split('\\+|\\-|\\|\\*|\\(|\\)',exp)\n",
+    "    return sorted(list(set([re.sub('\\d+','',x) for x in resp])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def group_terms(exp):                #Only supports + operators currently\n",
+    "    variables = get_variables(exp)\n",
+    "    grouped_terms = []\n",
+    "    for variable in variables:\n",
+    "        counter = 0\n",
+    "        pattern = '(?:\\d+)?(?<![a-z]){}(?![a-z])'.format(variable)\n",
+    "        subexpressions = re.findall(pattern,exp)\n",
+    "        for term in subexpressions:\n",
+    "            if variable in term:\n",
+    "                counter += 1\n",
+    "            query = '\\d+'\n",
+    "            resp = re.findall(query + variable,term)\n",
+    "            if resp:\n",
+    "                counter += int(resp[0].replace(variable,''))\n",
+    "                counter -= 1\n",
+    "        grouped_terms.append(str(counter) + variable)\n",
+    "    return '+'.join(grouped_terms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x', 'y', 'yx'}"
+       "'7x+77xy+325y'"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s"
+    "group_terms('5x+322y+32xy+3y+2x+45xy')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 237,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['60x', '3x', '2yx', '5y', '2x', '5x', '8y']"
-      ]
-     },
-     "execution_count": 237,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
