--- a/exp_solving.ipynb
+++ b/exp_solving.ipynb
@@ -373,41 +373,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def group_terms(exp):                #Only supports + operators currently\n",
-    "    variables = get_variables(exp)\n",
-    "    grouped_terms = []\n",
-    "    for variable in variables:\n",
-    "        counter = 0\n",
-    "        pattern = '(?:\\d+)?(?<![a-z]){}(?![a-z])'.format(variable)\n",
+    "#Groups like terms in an expressions. Only supports + operators currently\n",
+    "def group_terms(exp):                \n",
+    "    variables = get_variables(exp)   #Obtains only the variables in the expression\n",
+    "    grouped_terms = []               #Empty list to store the combined terms\n",
+    "    for variable in variables:       #For every variable in the list variables\n",
+    "        counter = 0                  #Counter to count variable occurances in the expression\n",
+    "        pattern = '(?:\\d+)?(?<![a-z]){}(?![a-z])'.format(variable)  #Pattern to isolate like terms \n",
     "        subexpressions = re.findall(pattern,exp)\n",
-    "        for term in subexpressions:\n",
-    "            if variable in term:\n",
-    "                counter += 1\n",
+    "        for term in subexpressions:  #Loops over each subexp       \n",
+    "            if variable in term:     \n",
+    "                counter += 1         #Counts all the time a variable is found in the expression\n",
     "            query = '\\d+'\n",
-    "            resp = re.findall(query + variable,term)\n",
+    "            resp = re.findall(query + variable,term) #If some variable and its coefficient\n",
     "            if resp:\n",
-    "                counter += int(resp[0].replace(variable,''))\n",
-    "                counter -= 1\n",
-    "        grouped_terms.append(str(counter) + variable)\n",
-    "    return '+'.join(grouped_terms)"
+    "                counter += int(resp[0].replace(variable,'')) #Adds the coefficient to counter\n",
+    "                counter -= 1         #Removes 1 from the counter everytime the term is matched\n",
+    "        grouped_terms.append(str(counter) + variable)#Appends the variable and its coefficient to a list\n",
+    "    return '+'.join(grouped_terms)   #Returns each term as a string joined with '+'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "2\n",
+      "32\n",
+      "45\n",
+      "322\n",
+      "3\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'7x+77xy+325y'"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
