--- a/exp_solving.ipynb
+++ b/exp_solving.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "'(2*y-150)/60'"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "'3x+2x+1*x'"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,29 +105,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-132-6e63b6684af8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mreplace_operator_with_inverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'5*5'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-131-d71b86ad2319>\u001b[0m in \u001b[0;36mreplace_operator_with_inverse\u001b[0;34m(exp, operator)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mreplace_operator_with_inverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moperator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0minverse_operators\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'-'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'+'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'+'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'-'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'*'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'/'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'*'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moperator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minverse_operators\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moperator\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m: ''"
-     ]
+     "data": {
+      "text/plain": [
+       "'5*5'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "replace_operator_with_inverse('5*5','')"
+    "replace_operator_with_inverse('5*5','/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +180,7 @@
        "['2y']"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +200,7 @@
        "['60x', '150', '3x', '2yx', '5y', '2x', '5x', '8y', '309', '23']"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -252,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +268,7 @@
        "['150', '309', '23']"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +297,7 @@
        "['56x']"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,28 +397,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "2\n",
-      "32\n",
-      "45\n",
-      "322\n",
-      "3\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'7x+77xy+325y'"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
