--- a/exp_verifier.ipynb
+++ b/exp_verifier.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,91 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "expr = '2+10'\n",
-    "isValid(expr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "expr = '2/10'\n",
-    "isValid(expr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "expr = '2.0+100.00034'\n",
-    "isValid(expr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "expr = '1.3049.3493+3'\n",
-    "isValid(expr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,37 +42,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Assuming that the current operations are: addition, Checks if that operator is in the expression\n",
-    "def isSymbol(expr):\n",
-    "    valid = False\n",
-    "    if '+' in expr:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False"
+    "#Assuming that the current operations are: addition, Checks if that operator is in the expression.\n",
+    "def split_on_symbols(expr):\n",
+    "    operators = ['\\+','\\-','\\*','\\/']\n",
+    "    split_query = '|'.join(operators)\n",
+    "    return re.split(split_query,expr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Checks validity of expression by performing that various format checks on expression. \n",
+    "#Checks validity of expression by performing that various format checks on the expression. \n",
     "def isValid(expr):\n",
-    "    lst = expr.split('+')\n",
     "    valid = []\n",
-    "\n",
-    "    for i in lst:\n",
-    "      \n",
-    "        if isNumber(i):\n",
-    "            valid.append('True')\n",
-    "        else:\n",
-    "            valid.append('False')\n",
-    "    if valid.count('False') == 0:\n",
+    "    for ix in split_on_symbols(expr):\n",
+    "        valid.append(isNumber(ix))\n",
+    "    if valid.count(False) == 0:\n",
     "        return True\n",
     "    else:\n",
     "        return False"
@@ -164,10 +72,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expr = '2+10'\n",
+    "isValid(expr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expr = '2/10'\n",
+    "isValid(expr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expr = '2.0+100.00034'\n",
+    "isValid(expr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expr = '1.3049.3493+3'\n",
+    "isValid(expr)"
+   ]
   },
   {
    "cell_type": "code",
