--- a/exp_verifier.ipynb
+++ b/exp_verifier.ipynb
@@ -9,21 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re"
+    "import re\n",
+    "#from sympy import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#compares ords of the expression with a list of acceptable ords to validate a number. Also ensures only 1\n",
-    "#instance of '.' is in the number.\n",
+    "#instance of '.' is in the number else invalid.\n",
     "def isNumber(string):\n",
     "    acceptableOrds = [ord(str(x)) for x in range(0,9)]+[ord('.')]\n",
     "    ords1 = []\n",
@@ -42,20 +43,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Assuming that the current operations are: addition, Checks if that operator is in the expression.\n",
+    "#Returns the expression split on any operators so '3+4' IN will be ['3', '4'] OUT.\n",
     "def split_on_symbols(expr):\n",
-    "    operators = ['\\+','\\-','\\*','\\/']\n",
-    "    split_query = '|'.join(operators)\n",
+    "    symbols = ['\\+','\\-','\\*','\\/','\\(','\\)']\n",
+    "    split_query = '|'.join(symbols)\n",
     "    return re.split(split_query,expr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://codereview.stackexchange.com/questions/180567/checking-for-balanced-brackets-in-python\n",
+    "def parens_matched(expr):\n",
+    "    \"\"\"\n",
+    "    Finds out how balanced an expression is.\n",
+    "    With a string containing only brackets.\n",
+    "\n",
+    "    >>> is_matched('[]()()(((([])))')\n",
+    "    False\n",
+    "    >>> is_matched('[](){{{[]}}}')\n",
+    "    True\n",
+    "    \"\"\"\n",
+    "    opening = tuple('({[')\n",
+    "    closing = tuple(')}]')\n",
+    "    mapping = dict(zip(opening, closing))\n",
+    "    queue = []\n",
+    "\n",
+    "    for letter in expr:\n",
+    "        if letter in opening:\n",
+    "            queue.append(mapping[letter])\n",
+    "            \n",
+    "        elif letter in closing:\n",
+    "            if not queue or letter != queue.pop():\n",
+    "                return False\n",
+    "    return not queue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,15 +97,23 @@
     "    valid = []\n",
     "    for ix in split_on_symbols(expr):\n",
     "        valid.append(isNumber(ix))\n",
+    "        valid.append(parens_matched(expr))\n",
     "    if valid.count(False) == 0:\n",
     "        return True\n",
     "    else:\n",
-    "        return False"
+    "        return False "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +122,7 @@
        "True"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,49 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "expr = '2/10'\n",
-    "isValid(expr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "expr = '2.0+100.00034'\n",
-    "isValid(expr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +143,49 @@
        "False"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expr = '2/10+3*34343a'\n",
+    "isValid(expr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expr = '2.0+100.00034/45'\n",
+    "isValid(expr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,6 +193,47 @@
    "source": [
     "expr = '1.3049.3493+3'\n",
     "isValid(expr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expr = '1+(2*3)-2'\n",
+    "isValid(expr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2', '10', '343.434']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "split_on_symbols('2/10+343.434')"
    ]
   },
   {
